# Playwright-Python

./: .gitignore  requirements.txt
playwright-behave/: .flake8  .pre-commit-config.yaml  behave.ini  pyproject.toml
playwright-behave/features/: amazon_feature.feature  amazon_login.feature  amazon_mobiles.feature  check_dropdown.feature  environment.py  google.feature  login.feature  multiple_products.feature  navigation.feature  update_location.feature  user_login.feature  user_registration.feature
playwright-behave/reports/: 0076adbc-39dd-4d35-874f-c330afc7542d-result.json  02890b3c-9929-4ca1-b90d-0948ee48b4b5-result.json  03ea747f-f809-4784-92db-b80ff5fc6f9a-result.json  04fcb877-a097-4ebf-a6f5-f871f3c3f276-result.json  0558db68-2a12-4bc3-9ecd-18542de1b795-result.json  079cfc65-b1a1-42ea-b848-98faeb121e40-result.json  09d58a3f-59b7-4b45-842b-2956d812d6ce-result.json  0ab39b9f-74e0-4e79-a904-bd58464978a5-result.json  0c40ac6b-0cef-406e-800d-3e1d3b226b2c-result.json  0fb65381-ef28-4009-8c5e-b691244de5cb-result.json  101b4490-a2f0-4dc9-84f6-a19e442363ad-result.json  105199b5-ab85-405a-a7ab-6eb6e6fbfd9b-result.json  11cfa989-9737-44c9-aeef-df48c510cf0e-result.json  13fe7563-427a-4ab9-b500-a531f994e583-result.json  1788a267-6dbd-48d4-ad67-7d71df605ec3-result.json  1c41283b-7929-434e-ab74-950deeabb003-result.json  1d001d24-d4de-4e65-8981-5c0e4799ab4c-result.json  1d38ca01-ea02-4550-9261-81936647ef37-result.json  1e63a47f-b51a-4568-83c7-b5cb073f071d-result.json  1eaf5809-1a7e-4921-a5c8-a2e444f4e35a-result.json  1f126052-f152-4f0c-b85b-68a021c64506-result.json  (+127 more)
(+41 files in other folders)
