[project]
name = "playwrightpoetry"
version = "0.1.0"
description = ""
authors = [
    {name = "shreya"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.50.0,<2.0.0)",
    "behave (>=1.2.6,<2.0.0)",
    "allure-pytest (>=2.13.5,<3.0.0)",
    "allure-behave (>=2.13.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"

